# chokepoint-atlas-studio

./: .gitignore  INSTALL.md  README.md  README_CN.md  README_EN.md  pyproject.toml  requirements.txt
chokepoint_atlas/: __init__.py  cli.py  studio.py
docs/: OPTIMIZATION_REVIEW.md  V2_IMPLEMENTATION_NOTES_CN.md
examples/: web_compare_input_cn.json  web_pack_input_cn.json  web_source_bundle_input_cn.json
web/: app.js  index.html  styles.css
